--- a/app/src/main/res/layout/activity_question_details.xml
+++ b/app/src/main/res/layout/activity_question_details.xml
@@ -8,7 +8,8 @@
         android:id="@+id/details_progress_bar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"/>
+        android:layout_gravity="center"
+        android:visibility="gone"/>
 
     <ScrollView
         android:layout_width="match_parent"
