--- a/app/src/main/res/layout/layout_questions_list.xml
+++ b/app/src/main/res/layout/layout_questions_list.xml
@@ -1,8 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:orientation="vertical">
+
+    <include layout="@layout/toolbar_top"/>
 
     <FrameLayout
         android:layout_width="match_parent"
@@ -23,4 +26,4 @@
 
     </FrameLayout>
 
-</android.support.constraint.ConstraintLayout>
+</LinearLayout>
