--- a/app/src/main/res/layout/layout_question_details.xml
+++ b/app/src/main/res/layout/layout_question_details.xml
@@ -13,10 +13,10 @@
 
         <ProgressBar
             android:id="@+id/details_progress_bar"
-            android:layout_width="match_parent"
+            style="?android:attr/progressBarStyle"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:visibility="gone"/>
+            android:layout_gravity="center"/>
 
         <ScrollView
             android:layout_width="match_parent"
@@ -47,7 +47,6 @@
                     android:textSize="20sp"/>
             </LinearLayout>
         </ScrollView>
-
     </FrameLayout>
 
 </LinearLayout>
